<resources>
    <string name="app_name">ScammerScanner</string>
    <string name="notification_setting">Уведомление о подозрительном номере</string>
    <string name="disable_scammer_setting">Оклонять вызовы от мошенников</string>
    <string name="scammer">Мошеннический</string>
    <string name="maybe_scammer">Возиожно мошеннический</string>
    <string name="suspicious">Подозрительный</string>
    <string name="number_title">Номера</string>

    <string name="incoming">Входящий</string>
    <string name="outgoing">Исходящий</string>
    <string name="blocked">Заблокировано</string>

    <string name="calls_title">Вызовы</string>
    <string name="sms_title">СМС</string>
    <string name="settings_title">Настройки</string>

    <string name="to_scammer">Мошенический номер</string>
    <string name="to_maybe_scammer">Возможно мошенический номер</string>
    <string name="to_suspicious">Подозрительный номер</string>

    <string name="empty_list">Список пуст</string>

    <string name="scammer_message">ЭТО НОМЕР МОШЕНИКА</string>
    <string name="maybe_scammer_message">Возможно это мошенический номер</string>
    <string name="suspicious_message">Это подозрительный номер</string>

    <string name="settings">Настройки</string>

    <string name="sms_body_example">Включая вакансии агентств.Включая вакансии без указания зарплаты.Искать удаленная работа, от 1 года до 3 лет, в названии вакансии.Выводить за месяц</string>
    <string name="number_example">+77773353723</string>
    <string name="date_example">13.07.23</string>
</resources>