<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/settings_notification_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/DefaultTextAppearance"
        android:text="@string/notification_setting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/settings_notification_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintTop_toTopOf="@id/settings_notification_textview"
        app:layout_constraintBottom_toBottomOf="@id/settings_notification_textview"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_notification_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/settings_scammer_disable_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/disable_scammer_setting"
        android:textAppearance="@style/DefaultTextAppearance"
        app:layout_constraintTop_toBottomOf="@id/settings_notification_textview"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/settings_scammer_disable_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CompoundButton.CheckBox"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintTop_toTopOf="@id/settings_scammer_disable_textview"
        app:layout_constraintBottom_toBottomOf="@id/settings_scammer_disable_textview"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/settings_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/number_title"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/settings_scammer_disable_textview"
        app:layout_constraintStart_toStartOf="@id/settings_scammer_disable_textview"/>

    <LinearLayout
        android:id="@+id/settings_scammer_numbers_area"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_number_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scammer"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="fitEnd"
            android:layout_marginStart="90dp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_scammer_numbers_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/settings_maybe_scammer_numbers_area"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_scammer_numbers_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maybe_scammer"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="fitEnd"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_maybe_scammer_numbers_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/settings_suspicious_numbers_area"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/settings_maybe_scammer_numbers_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suspicious"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="fitEnd"
            android:src="@drawable/arrow_right" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>